fix icon spacing

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -323,7 +323,7 @@ body {
     display: flex;
     align-items: center;
     font-weight: normal;
-    padding-left: 24px;
+    margin-left: 56px;
 }
 
 .preferences-content {
